# kdegraphics-strigi-analyzer

./: CMakeLists.txt  Makefile.am  RETURNED_ITEMS  configure.in.bot  configure.in.in
bmp/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_bmp.cpp  kfile_bmp.desktop  kfile_bmp.h
dds/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_dds.cpp  kfile_dds.desktop  kfile_dds.h
dvi/: CMakeLists.txt  Makefile.am  Messages.sh  dviendanalyzer.cpp  dvithroughanalyzer.cpp  kfile_dvi.cpp  kfile_dvi.desktop  kfile_dvi.h
exr/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.in  kfile_exr.cpp  kfile_exr.desktop  kfile_exr.h
gif/: CMakeLists.txt  Makefile.am  Messages.sh  README  gif-info.1  gif-info.c  kfile_gif.cpp  kfile_gif.desktop  kfile_gif.h  parse_gif.c
ico/: CMakeLists.txt  Makefile.am  Messages.sh  icothroughanalyzer.cpp  kfile_ico.cpp  kfile_ico.desktop  kfile_ico.h
jpeg/: CMakeLists.txt  Makefile.am  Messages.sh  README  exif.cpp  exif.h  jpegendanalyzer.cpp  kfile_jpeg.cpp  kfile_jpeg.desktop  kfile_jpeg.h  kfile_setcomment.cpp  kfilewrite_jpeg.cpp  kfilewrite_jpeg.desktop  kfilewrite_jpeg.h
pcx/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_pcx.cpp  kfile_pcx.desktop  kfile_pcx.h
pdf/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.in  kfile_pdf.cpp  kfile_pdf.desktop  kfile_pdf.h  pdfthroughanalyzer.cpp
png/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.in  kfile_exr.cpp  kfile_exr.h  kfile_png.cpp  kfile_png.desktop  kfile_png.h
pnm/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_pnm.cpp  kfile_pnm.desktop  kfile_pnm.h
ps/: CMakeLists.txt  Makefile.am  dscparse.cpp  dscparse.h  dscparse_adapter.cpp  dscparse_adapter.h  gscreator.cpp  gscreator.h  gsthumbnail.desktop  kfile_ps.cpp  kfile_ps.desktop  kfile_ps.h  kmaybe.h  psendanalyzer.cpp
raw/: CMakeLists.txt  Makefile.am  Messages.sh  kcamerarawplugin.cpp  kcamerarawplugin.h  kfile_raw.desktop  parse.c  x-image-raw.desktop  x-image-raw.magic
rgb/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_rgb.cpp  kfile_rgb.desktop  kfile_rgb.h
tga/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_tga.cpp  kfile_tga.desktop  kfile_tga.h
tiff/: CMakeLists.txt  Makefile.am  Messages.sh  configure.in.in  kfile_tiff.cpp  kfile_tiff.desktop  kfile_tiff.h  tiffendanalyzer.cpp
xbm/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_xbm.cpp  kfile_xbm.desktop  kfile_xbm.h
xpm/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_xpm.cpp  kfile_xpm.desktop  kfile_xpm.h
xps/: CMakeLists.txt  Messages.sh  kfile_xps.cpp  kfile_xps.desktop  kfile_xps.h
